feat: DIDResolution header changes [DEV-4721] (#336)
* feat: Accept contetType params for DID URL Resolution

* Update tests

* Add additional tests

* Get highest priority header and params

* Add additional tests

* Add additional tests

* feat: Render json and text in ResourceWithMetadata

* fix: Add custom json marshaller

* fix linting errors

* feat: Return metadata in contentMetadata key

* Update integration tests

* feat: new headers for didDoc resolution


* fix: lint errors


* Use go-accept-headers

* Updated integration tests


* Revert to contentPriorityType

* updated GetPriorityContentType


* fix default resource profile

* Empty commit for triggering deployment/fix

* fix resourceMetadata


* fixed browser errors


* updated dependabot changes


* added testcases


* Added Chrome test cases


* npm update

* make swagger

* Updated with review comments


* Updated with review comments


---------
