# types/resource_dereferencing.go
@@ -1,10 +1,10 @@
 package types
 
 type ResourceDereferencing struct {
-	Context               string                     `json:"@context,omitempty" example:"https://w3id.org/did-resolution/v1"`
-	DereferencingMetadata DereferencingMetadata      `json:"dereferencingMetadata"`
-	ContentStream         ContentStreamI             `json:"contentStream"`
-	Metadata              ResolutionResourceMetadata `json:"contentMetadata"`
+	Context               string                `json:"@context,omitempty" example:"https://w3id.org/did-resolution/v1"`
+	DereferencingMetadata DereferencingMetadata `json:"dereferencingMetadata"`
+	ContentStream         ContentStreamI        `json:"contentStream"`
+	Metadata              *DereferencedResource `json:"contentMetadata"`
 }
 
 func NewResourceDereferencingFromContent(did string, contentType ContentType, contentStream ContentStreamI) *ResourceDereferencing {
